# Extraction_of_maize_phenotype_parameters

./: README.md
parameters_traits_extraction/cal_trait/height/: CMakeLists.txt  height.cpp
parameters_traits_extraction/cal_trait/leaf_angle/: CMakeLists.txt  leaf_angle.cpp
parameters_traits_extraction/cal_trait/leaf_length/: CMakeLists.txt  leaf_length.cpp
parameters_traits_extraction/cal_trait/width/: CMakeLists.txt  canopy_width.cpp
parameters_traits_extraction/filters/con_filters/: CMakeLists.txt  con.cpp
parameters_traits_extraction/filters/sor/: CMakeLists.txt  sor.cpp
parameters_traits_extraction/read_clouddatas/: CMakeLists.txt  read.cpp
parameters_traits_extraction/registration/: CMakeLists.txt  icp5.cpp
parameters_traits_extraction/segmetationn/left_extract/: CMakeLists.txt  seg.cpp
parameters_traits_extraction/segmetationn/left_stem_seg/: seg.cpp
parameters_traits_extraction/test_datas/icp/: 1.pcd  after.pcd
parameters_traits_extraction/test_datas/on/: 000.pcd  120.pcd  240.pcd
parameters_traits_extraction/test_datas/orgin/: 000.pcd  120.pcd  240.pcd
parameters_traits_extraction/test_datas/sor/: 000.pcd  120.pcd  240.pcd
